--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -14,7 +14,7 @@ h3 {
 
 .navbar-brand {
     cursor: pointer;
-    font-size: 30px;
+    /* font-size: 30px; */
     letter-spacing: 3px;
     margin-left: 100px;
     margin-top: -9px;
